namespace Boolk.Domain.Entities;

public class Kebab : RestaurantBase
{
    public override string DisplayName => "Kebab";
    public override string DisplayIcon => "🫔";
}
